:construction: Makes it score it correctly, yet to make it usable on mobile

--- a/src/components/dart-board/dart-board.css
+++ b/src/components/dart-board/dart-board.css
@@ -52,7 +52,7 @@ svg {
   height: 568px;
   position: absolute;
   z-index:1;
-  transform: rotate(9deg);
+  transform: rotate(-9deg);
 }
 
 g {
